--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+body
+ background-color: white
+ text-align: center
+ margin: 0
+ padding: 0
