--- a/src/app/Componentes/data-table/data-table.component.html
+++ b/src/app/Componentes/data-table/data-table.component.html
@@ -5,7 +5,7 @@
       <ng-template pTemplate="header">
         <tr>
           <th>Autorizador</th>
-          <th>"Autorização4"</th>
+          <th>Autorização4</th>
           <th>Retorno Autorização4</th>
           <th>Inutilização4</th>
           <th>Consulta Protocolo4</th>
