--- a/src/app/Componentes/provincia/provincia.component.html
+++ b/src/app/Componentes/provincia/provincia.component.html
@@ -1,7 +1,7 @@
 <div class="Container">
 <h3 class="align-content-center">Seleccione la Provincia</h3>
  <div class="col-12">
-   <p-dropdown [options]="provincias" [(ngModel)]="selectedCityCode" placeholder="Select a City" optionLabel="nombre" [showClear]="true" (onBlur)="ValidarProvincia()"></p-dropdown>
+   <p-dropdown [options]="provincias" [(ngModel)]="selectedCityCode" placeholder="Select a City" optionLabel="nombre" (onBlur)="ValidarProvincia()"></p-dropdown>
    <button pButton pRipple class="ml-4"  (click)="HandleBuscar()" type="button" label="Buscar"></button>
    <p-messages *ngIf="ErrorMensaje!=null" p-messages severity="error">
      <ng-template pTemplate>
